welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:12: error: ';' expected but 'if' found.
  }if (z=10){
   ^